[package]
name = "codex-continuity-windows"
version = "1.0.0"
edition = "2021"
build = "build.rs"

[dependencies]

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
  "Win32_UI_Controls",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_DataExchange",
  "Win32_System_Memory",
  "Win32_System_SystemInformation",
  "Win32_System_Com",
  "Win32_System_Ole",
] }

[profile.release]
strip = "symbols"
lto = "thin"
codegen-units = 1
panic = "abort"
